# web_cad

./: .gitignore  LICENSE  README.md  build  build_all_examples  package-lock.json  package.json  run  tsconfig.json  webpack.config.js
engine/: .gitignore  Cargo.toml
engine/.cargo/: config.toml
engine/src/: gumball.rs  instance.rs  instance_interface.rs  lib.rs  utils.rs
engine/src/geometry/: bind_group.rs  curve.rs  geometry.rs  geometry_id.rs  lines.rs  mesh.rs  mod.rs  polyline.rs  surface.rs  utils.rs
engine/src/gpu_acceleration_structures/: create_mesh_bb_buffer.wgsl  create_mesh_bbh.wgsl  create_mesh_bbh_split.wgsl  create_mesh_bbh_split_1.wgsl  create_mesh_bbh_split_2.wgsl  create_mesh_bbh_split_finder.wgsl  create_triangle_info_buffer.wgsl  line_bbh_generator.rs  mesh_bbh.rs  mesh_bbh_generator.rs  mod.rs
engine/src/gpu_algorithms/: bitonic_merge_sort.rs  bitonic_merge_sort.wgsl  iota.rs  iota.wgsl  mod.rs  prefix_sum.rs  prefix_sum.wgsl  prefix_sum_segmentation.wgsl  radix_sort.rs
engine/src/gpu_ray_tracing/: intersect_mesh.wgsl  intersection.rs  mod.rs
engine/src/gpu_raytracing/: create_mesh_bbh.wgsl  intersect_mesh_bbh.wgsl  intersection.rs  mesh_bbh.rs  mesh_bbh.wgsl  mod.rs
engine/src/gpu_samplers/: curve_sampler.rs  curve_sampler.wgsl  index_buffer_generator.rs  params.rs  surface_sampler.rs  surface_sampler_stage_2.wgsl  utils.rs
engine/src/math/: frustum.rs  mat3.rs  mat4.rs  mod.rs  ray.rs  utils.rs  vec3.rs  vec4.rs
engine/src/profiling/: stats.rs
engine/src/render/: buffer.rs  mod.rs  pipeline.rs  renderer.rs
engine/src/samplers/: curve_sampler.rs  curve_sampler.wgsl  index_buffer_generator.rs  index_buffer_generator.wgsl  mod.rs  params.rs  surface_sampler.rs  surface_sampler_phase_1.wgsl  surface_sampler_phase_2.wgsl  surface_sampler_stage_1.wgsl  surface_sampler_stage_2.wgsl  surface_sampler_stage_3.wgsl  utils.rs
engine/src/scene/: mod.rs  scene.rs  scene_interface.rs
engine/src/tests/: mod.rs
web_cad/: app.ts  (+1 more)
(+84 files in other folders)
