[package]
name = "web_cad_engine"
version = "0.0.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
web-sys = { version = "0.3", features = [
  "Navigator",
  "Gpu",
  "Window",
  "GpuAdapter",
  "GpuDevice",
  "HtmlCanvasElement",
  "GpuTextureFormat",
  "GpuCanvasContext",
] }
wgpu = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.15", features = ["derive"] }
console_log = "1.0"
log = "0.4"
lazy_static = "1.4"

[lib]
crate-type = ["cdylib", "rlib"]
