[package]
name = "web_cad_engine"
version = "0.0.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"


[dependencies]
wgpu = {version = "0.20", features = ["fragile-send-sync-non-atomic-wasm"] }
web-sys = { version = "0.3", features = [
  "Navigator",
  "Gpu",
  "GpuAdapter",
  "GpuDevice",
  "HtmlCanvasElement",
  "GpuTextureFormat",
  "GpuCanvasContext",
] }
js-sys = { version = "0.3" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.15", features = ["derive"] }
console_log = "1.0"
log = "0.4"
lazy_static = "1.4"
futures = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
